# news_vane

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  scrape.yml
config/: settings.py
migrations/: env.py
migrations/versions/: 2801e6781783_create_articles_table.py  59d6acdf882d_add_predicted_label_and_score_to_.py  994db2ded479_add_sentiment_and_sentiment_score_to_.py  a4188b322b0d_create_feedback_table.py  bbde2124489b_create_prediction_table.py
notebooks/: 01_ag_news_eda.ipynb
scripts/: evaluate_onnx.py  export_onnx.py  probe_article.py  probe_sections.py  quantize_onnx.py  run_scraper.py  train.py  train_distilbert.py
scripts/probes/: probe_feed_health.py  probe_gpu.py  probe_harvest.py  probe_mood.py  probe_onnx.py  probe_reference.py  probe_sections.py  probe_sentiment.py  probe_tokenize.py  probe_train_smoke.py
src/newsvane/: __init__.py
src/newsvane/analytics/: anomalies.py  distributions.py  drift.py  summary.py  trends.py
src/newsvane/api/: main.py
src/newsvane/dashboard/: app.py  client.py  requirements.txt  shaping.py
src/newsvane/dashboard/panels/: alarms.py  mix.py  momentum.py  mood.py
src/newsvane/data/: __init__.py  loader.py  scraper.py
src/newsvane/models/: __init__.py  baseline.py  batch.py  distilbert.py  distilbert_data.py  dummy.py  onnx.py  sentiment.py
src/newsvane/storage/: database.py  models.py  repository.py
tests/: conftest.py  test_anomalies.py  test_api.py  test_batch.py  test_dashboard.py  test_distributions.py  test_drift.py  test_model.py  test_scraper.py  test_sentiment.py  test_summary.py  test_trends.py
