[project]
name = "newsvane"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Manglam", email = "manglamdubey11@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.139.0",
    "joblib>=1.5.3",
    "mlflow>=3",
    "pandas>=2.2,<3",
    "pandas-stubs>=2.2,<3",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "scikit-learn>=1.9.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]


[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    # A warning I scroll past is a warning I have decided to ignore. I turn them
    # into failures so a deprecation cannot rot quietly until an upgrade breaks
    # the build. Anything I genuinely cannot fix gets an explicit line below --
    # a written decision, with a reason, not silence.
    "error",
    # joblib reaches into a NumPy internal that NumPy 2.5 is retiring. The fix has
    # to land in joblib, not here.
    "ignore:Setting the shape on a NumPy array has been deprecated:DeprecationWarning",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
