[project]
name = "newsvane"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Manglam", email = "manglamdubey11@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.1.0",
    "alembic>=1.18.5",
    "datasets>=5.0.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "lxml>=6.1.1",
    "mlflow>=3",
    "pandas>=2.2,<3",
    "pandas-stubs>=2.2,<3",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "scikit-learn>=1.9.0",
    "sqlalchemy>=2.0.51",
    "torch==2.11.0",
    "transformers>=5.14.1",
    "uvicorn[standard]>=0.51.0",
]


[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
lint = [
    "ruff>=0.15.21",
]
dev = [
    { include-group = "lint" },
    "httpx2>=2.5.0",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "pytest>=9.1.1",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    # A warning I scroll past is a warning I have decided to ignore. I turn them
    # into failures so a deprecation cannot rot quietly until an upgrade breaks
    # the build. Anything I genuinely cannot fix gets an explicit line below --
    # a written decision, with a reason, not silence.
    "error",
    # joblib reaches into a NumPy internal that NumPy 2.5 is retiring. The fix has
    # to land in joblib, not here.
    "ignore:Setting the shape on a NumPy array has been deprecated:DeprecationWarning",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Alembic writes these files, not me, and they are applied history -- the local
# DB, the test DB and Neon have all already run them. Reformatting an applied
# migration edits the record of what happened. I let the generator's long lines
# stand and keep every other rule switched on.
"migrations/versions/*.py" = ["E501"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# torch has two right answers depending on where it lands. My Windows box fine-tunes
# on the RTX 4060, so it takes the CUDA build. Linux here means CI or the container,
# and both only ever serve on CPU -- so they take the CPU wheel and skip ~2.5 GB of
# CUDA libraries they will never call.
[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]